PayPal button + community page link

--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -1,15 +1,30 @@
+<!doctype html>
 <html>
-<head></head>
+<head>
+<title>Laks host</title>
+</head>
 <body>
 <h1>Laks host</h1>
 <img src="_assets/laks.jpg" alt="Ryba :P" />
 <h2>Services</h2>
 <ul>
-<li><a href="//plugins.srokap.pl/">Elgg Plugins</a> project (see <a href="https://github.com/Srokap/ElggPlugins">Github</a>)</li>
+<li><a href="https://plugins.srokap.pl/">Elgg Plugins</a> project (see <a href="https://github.com/Srokap/ElggPlugins">Github</a>)</li>
 </ul>
 <h2>Links</h2>
 <ul>
-<li><a href="https://github.com/Srokap">My Github account</a></li>
+<li><a href="https://github.com/Srokap">Github account</a></li>
+<li><a href="http://community.elgg.org/profile/srokap">Elgg community account</a></li>
 </ul>
+<p>If you feel like it, you can always buy me a beer ;-)
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<input type="hidden" name="cmd" value="_donations">
+<input type="hidden" name="business" value="BQ2EUPSSVX2LJ">
+<input type="hidden" name="lc" value="PL">
+<input type="hidden" name="currency_code" value="USD">
+<input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHosted">
+<input type="image" src="https://www.paypalobjects.com/pl_PL/PL/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal — P³aæ wygodnie i bezpiecznie">
+<img alt="" border="0" src="https://www.paypalobjects.com/pl_PL/i/scr/pixel.gif" width="1" height="1">
+</form>
+</p>
 </body>
 </html>
