--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
 <body>
 <h1>Laks host</h1>
 <img src="_assets/laks.jpg" alt="Ryba :P" />
-<h2>Services</h2>
-<ul>
-<li><a href="https://plugins.srokap.pl/">Elgg Plugins</a> project (see <a href="https://github.com/Srokap/ElggPlugins">Github</a>)</li>
-</ul>
 <h2>Links</h2>
 <ul>
 <li><a href="https://github.com/Srokap">Github account</a></li>
 <li><a href="http://community.elgg.org/profile/srokap">Elgg community account</a></li>
+<li><a href="http://www.linkedin.com/pub/pawe%C5%82-sroka/44/917/8b7">Linkedin profile</a></li>
+</ul>
+<h2>Elgg plugins</h2>
+<ul>
+<li><a href="https://github.com/Srokap/srokap_plugin_installer">Plugins downloader and installer</a></li>
+<li><a href="https://github.com/Srokap/code_review">Code review</a></li>
+<li><a href="https://github.com/Srokap/data_generator">Data generator</a></li>
+<li><a href="https://github.com/Srokap/translation_diagnostic">Translation diagnostic</a></li>
+<li><a href="https://github.com/Srokap/db_backup">DB backup and restoration</a></li>
 </ul>
 <p>If you feel like it, you can always buy me a beer ;-)</p>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
