--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Laks host</h1>
-<img src="_assets/laks.jpg" alt="Ryba :P" />
+<img src="https://raw.github.com/Srokap/srokap.github.io/master/_assets/laks.jpg" alt="Ryba :P" />
 <h2>Links</h2>
 <ul>
 <li><a href="https://github.com/Srokap">Github account</a></li>
