Playing with IndieAuth

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <img src="_assets/laks.jpg" alt="Ryba :P" />
 <h2>Links</h2>
 <ul>
-<li><a href="https://github.com/Srokap">Github account</a></li>
-<li><a href="http://community.elgg.org/profile/srokap">Elgg community account</a></li>
-<li><a href="http://www.linkedin.com/pub/pawe%C5%82-sroka/44/917/8b7">Linkedin profile</a></li>
+<li><a href="https://github.com/Srokap" rel="me">Github account</a></li>
+<li><a href="http://community.elgg.org/profile/srokap" rel="me">Elgg community account</a></li>
+<li><a href="http://www.linkedin.com/pub/pawe%C5%82-sroka/44/917/8b7" rel="me">Linkedin profile</a></li>
 </ul>
 <h2>Elgg plugins</h2>
 <ul>
