--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <li><a href="https://github.com/Srokap" rel="me">Github account</a></li>
 <li><a href="http://community.elgg.org/profile/srokap" rel="me">Elgg community account</a></li>
 <li><a href="http://www.linkedin.com/pub/pawe%C5%82-sroka/44/917/8b7" rel="me">Linkedin profile</a></li>
+<li><a href="https://profiles.google.com/srokap" rel="me">+Pawe³</a></li>
 </ul>
 <h2>Elgg plugins</h2>
 <ul>
