--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <li><a href="https://github.com/Srokap" rel="me">Github account</a></li>
 <li><a href="http://community.elgg.org/profile/srokap" rel="me">Elgg community account</a></li>
 <li><a href="http://www.linkedin.com/pub/pawe%C5%82-sroka/44/917/8b7" rel="me">Linkedin profile</a></li>
-<li><a href="https://plus.google.com/+Pawe³Sroka" rel="me">+Pawe³</a></li>
+<li><a href="https://plus.google.com/+Pawe%C5%82Sroka" rel="me">+Pawe³</a></li>
 <li><a href="https://twitter.com/srokap" rel="me">@srokap on Twitter</a></li>
 </ul>
 <h2>Elgg plugins</h2>
