--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 <h1>Laks host</h1>
 <img src="_assets/laks.jpg" alt="Ryba :P" />
+<img src="_assets/qr.png" alt="QR VCard" />
 <h2>Links</h2>
 <ul>
 <li><a href="https://github.com/Srokap" rel="me">Github account</a></li>
