--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Laks host</h1>
-<img src="_assets/laks.jpg" alt="Ryba :P" />
+<img src="_assets/laks.jpg" alt="Ryba :P" /><br/>
 <img src="_assets/qr.png" alt="QR VCard" />
 <h2>Links</h2>
 <ul>
