Corrected json roster source to use github one.

--- a/rs/index.html
+++ b/rs/index.html
@@ -169,7 +169,7 @@
 					$.ajax({
 						dataType: 'jsonp',
 						format: "json",
-						url: 'https://gist.github.com/Srokap/d931da30e4fe8650c45b/raw/rs_roster.json',
+						url: 'https://raw2.github.com/Srokap/srokap.github.io/master/rs/rs_roster.json',
 						success: function(){}
 					});
 				})();
