Copyright char changed.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		<div class="container">
 			<a href="http://nocookielaw.com/" rel="nofollow" class="btn navbar-btn btn-danger pull-right">Regarding cookies...</a>
 			<p class="navbar-text">
-				Copyright (C) 2014 Paweł Sroka
+				Copyright &copy; 2014 Paweł Sroka
 			</p>
 		</div>
 	</div>
