Added thingiverse link

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 					<li><a href="http://www.linkedin.com/pub/pawe%C5%82-sroka/44/917/8b7" rel="me">Linkedin profile</a></li>
 					<li><a href="https://plus.google.com/+Pawe%C5%82Sroka" rel="me">+Paweł</a></li>
 					<li><a href="https://twitter.com/srokap" rel="me">@srokap on Twitter</a></li>
-					<li><a href="http://gravatar.com/srokap" rel="me">Gravatar</a></li>
+					<li><a href="http://gravatar.com/srokap">Gravatar</a></li>
+					<li><a href="http://www.thingiverse.com/Srokap/designs" title="RepRap FTW!">Thingiverse</a></li>
 				</ul>
 			</div>
 
