Centered QR code

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 		<div class="row">
 			<div class="col-md-4">
 				<h2>vCard</h2>
-				<img src="_assets/qr.png" class="img-thumbnail img-responsive" alt="QR VCard" />
+				<center>
+					<img src="_assets/qr.png" class="img-thumbnail img-responsive" alt="QR VCard" title="Scan with your phone" />
+				</center>
 			</div>
 			
 			<div class="col-md-4">
