--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 								<li><a href="https://github.com/Srokap" rel="me">Github account</a></li>
 								<li><a href="http://community.elgg.org/profile/srokap" rel="me">Elgg community account</a></li>
 								<li><a href="http://www.linkedin.com/pub/pawe%C5%82-sroka/44/917/8b7" rel="me">Linkedin profile</a></li>
-								<li><a href="https://plus.google.com/+Pawe%C5%82Sroka" rel="me">+Paweł</a></li>
+								<li><a href="https://plus.google.com/+PawelSroka?rel=author" rel="me">+Paweł</a></li>
 								<li><a href="https://twitter.com/srokap" rel="me">@srokap on Twitter</a></li>
 								<li><a href="http://gravatar.com/srokap" rel="me">Gravatar</a></li>
 							</ul>
