--- a/index.html
+++ b/index.html
@@ -114,6 +114,45 @@
 				</span>
 			</div>
 		</div>
+
+		<div class="row">
+			<div class="col-md-6">
+				<h2>PGP Public Key</h2>
+				<p>
+					You'll find below my PGP(GPG) public key. You can also <a href="srokap_2013_11_18.asc">download .asc file</a> directly or&nbsp;from 
+						<a href="http://wwwkeys.pgp.net:11371/pks/lookup?search=0x68B51A60&op=vindex&fingerprint=on">one</a>
+						<a href="http://subkeys.pgp.net:11371/pks/lookup?search=0x68B51A60&op=vindex&fingerprint=on">of</a>
+						<a href="http://pgp.mit.edu/pks/lookup?search=0x68B51A60&op=vindex&fingerprint=on">pgp</a>
+						<a href="http://minsky.surfnet.nl/pks/lookup?search=0x68B51A60&op=vindex&fingerprint=on">servers</a>.
+				</p>
+				<pre>
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+Version: GnuPG v2.0.22 (MingW32)
+
+mQENBFKKmnEBCACcUCPz3t5MIa58rMZM4ZIf9Q0XhfxysTyHPn38ya2yJ72FtJyl
+ZBqyn7hsrhGQB3d1dW8BFhRnhrcwCM8PnOs+qYM3nBek0zILvKxlIe9k0iuoWbT3
+8hsY3Eeu5ekk7NQUJxdnDVDWy2ONuWs1zqaWvDX9e94kLq8puONVSL5gnve10++c
+ZP9Vqh2Kmorxp/R3BdsrUueaJ5tjXi9lTsAXjaHT/INBcGZ1mJvA6QszHQTv+w1L
+5t+Z2dP1tzaHXwkh8CLVx4ZPNzHcIVG4rAsrhDE9pV9MYKMKnEIN69ZdAzFDKtEd
+k7TH3ZLaCLelOPJdWd+mTkh42u4M86xlC45hABEBAAG0H1Bhd2XFgiBTcm9rYSA8
+c3Jva2FwQGdtYWlsLmNvbT6JATkEEwECACMCGy8HCwkIBwMCAQYVCAIJCgsEFgID
+AQIeAQIXgAUCU5y/OAAKCRBjoQzFaLUaYIQKB/0f82tSxMbj7YhIF6HI76rW3sTU
+7vNEIFQAEieXr/kxsjhvwoFC7Rx+tTukIHRQ89XrUzyNGE9P4jdL0q+8Ftm99kUj
+JSBKD+znM7diDlejC+8l/Vsyruo6Gjk+JSAaEN/Mio0nw0ePOK13LEiXCIw0wxAb
+hh8dDyeV+YkTWqA3HIqIrx4vtSKHFmDMan8VvG4n/RMlyE8V4eZFiSNYcEMhAaZc
+UfzZpNCJqbXqyn96mW2hyUzkt8avcsGagJXU5yxpoWCIYoHV7KkATXmHHWUz+FEk
+LW6zWc36mKnLcIy+pOG35Ba41Qfcy3Z0RdROtkQVCBy2dHAxx1qaveoGZoh6iQE/
+BBMBAgApBQJSippxAhsvBQkNKmQ/BwsJCAcDAgEGFQgCCQoLBBYCAwECHgECF4AA
+CgkQY6EMxWi1GmDR+wf/a8xyipAjRQQmB3QuLx195+q45C6UROdNPQxmimVY9h2W
+tlmEDv2yvtOlOw9pa7bqssBlb2dE/riIKJVH85C4iW4gzbQOYFeOxlgwKNK0YiJP
+Uwyv+A88eVBU4XfT11myTCRhUOJz+/MbZHRpq20N3xaQ9TJLcvWujy6VhugIxdZf
+Jj9fOKLHc5zwKwhIQVcOt/MLC36rWkuFEj+pjz0EQqbHQgQgHxnyGKjY6abLE2uE
+3JuzZUkykaD+WueW0LrHV+xj1dnNLYEy5MTLLNS27m70COfwLS/CeLuJUDSzRQXV
+vr2O/UcSCsYPSWt0qv8vRE14SOoeszZrupo3Q0uzlw==
+=X21A
+-----END PGP PUBLIC KEY BLOCK-----</pre>
+			</div>
+		</div>
 		
 	</div>
 
