--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="media">
             <div class="media-left">
               <big>
-                <span class="glyphicon glyphicon-duplicate"></span>
+                <span class="glyphicon glyphicon-list-alt"></span>
               </big>
             </div>
             <div class="media-body">
@@ -179,7 +179,7 @@
           <div class="media">
             <div class="media-left">
               <big>
-                <span class="glyphicon glyphicon-comment"></span>
+                <span class="glyphicon glyphicon-globe"></span>
               </big>
             </div>
             <div class="media-body">
