--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="col-md-4">
       <div class="panel panel-material-blue">
         <div class="panel-heading">
-          <h2 class="panel-title">vCard</h2>
+          <h2 class="panel-title"><span class="glyphicon glyphicon-user"></span> vCard</h2>
         </div>
         <div class="panel-body">
           <center>
@@ -105,7 +105,7 @@
     <div class="col-md-4">
       <div class="panel panel-material-pink">
         <div class="panel-heading">
-          <h2 class="panel-title">Links</h2>
+          <h2 class="panel-title"><span class="glyphicon glyphicon-link"></span> Links</h2>
         </div>
         <div class="panel-body">
           <p>
@@ -127,7 +127,7 @@
     <div class="col-md-4 pull-right">
       <div class="panel panel-material-green">
         <div class="panel-heading">
-          <h2 class="panel-title">Elgg plugins</h2>
+          <h2 class="panel-title"><span class="glyphicon glyphicon-th-large"></span> Elgg plugins</h2>
         </div>
         <div class="panel-body">
           <p>
@@ -217,7 +217,7 @@
     <div class="col-md-6 pull-left">
       <div class="panel panel-material-deep-orange">
         <div class="panel-heading">
-          <h2 class="panel-title">PGP Public Key</h2>
+          <h2 class="panel-title"><span class="glyphicon glyphicon-lock"></span> PGP Public Key</h2>
         </div>
         <div class="panel-body">
           <p>
