Added Github menu item, removed home and added fontawesome isons.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/material.min.css">
   <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/ripples.min.css">
   <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/roboto.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <style type="text/css">
     body {
       padding-bottom: 70px;
@@ -35,7 +36,6 @@
 
     <div class="collapse navbar-collapse navHeaderCollapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class=""><a href="http://srokap.pl/">Home</a>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Links <b class="caret"></b>
             <ul class="dropdown-menu">
@@ -61,6 +61,7 @@
         </li>
         <li><a href="#riddle" data-toggle="modal">Riddle</a>
         <li><a href="#donate" data-toggle="modal">Donate</a>
+        <li><a href="https://github.com/Srokap" target="_blank"><big><span class="fa fa-github-alt"></span></big> Github</a>
       </ul>
     </div>
 
