Let's go less official.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <p>
       I'm a <a href="https://nodejs.org/">Node.js</a> and web developer from <a
-      href="http://en.wikipedia.org/wiki/Poland">Poland</a>, Core developer at <a href="http://elgg.org/">Elgg.org</a>
+      href="http://en.wikipedia.org/wiki/Poland">Poland</a>
       and electronics geek.<br>
       You'll find here bunch of stuff related to me.
     </p>
