Updated PGP key

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         </div>
         <div class="panel-body">
           <p>
-            You'll find below my PGP(GPG) public key. You can also <a href="srokap_2013_11_18.asc">download .asc
+            You'll find below my PGP(GPG) public key. You can also <a href="srokap_2017_10_26.asc">download .asc
             file</a> directly or&nbsp;from
             <a href="http://wwwkeys.pgp.net:11371/pks/lookup?search=0x68B51A60&op=vindex&fingerprint=on">one</a>
             <a href="http://subkeys.pgp.net:11371/pks/lookup?search=0x68B51A60&op=vindex&fingerprint=on">of</a>
@@ -248,7 +248,6 @@
           </p>
           <pre>
 -----BEGIN PGP PUBLIC KEY BLOCK-----
-Version: GnuPG v2.0.22 (MingW32)
 
 mQENBFKKmnEBCACcUCPz3t5MIa58rMZM4ZIf9Q0XhfxysTyHPn38ya2yJ72FtJyl
 ZBqyn7hsrhGQB3d1dW8BFhRnhrcwCM8PnOs+qYM3nBek0zILvKxlIe9k0iuoWbT3
@@ -256,21 +255,36 @@ ZBqyn7hsrhGQB3d1dW8BFhRnhrcwCM8PnOs+qYM3nBek0zILvKxlIe9k0iuoWbT3
 ZP9Vqh2Kmorxp/R3BdsrUueaJ5tjXi9lTsAXjaHT/INBcGZ1mJvA6QszHQTv+w1L
 5t+Z2dP1tzaHXwkh8CLVx4ZPNzHcIVG4rAsrhDE9pV9MYKMKnEIN69ZdAzFDKtEd
 k7TH3ZLaCLelOPJdWd+mTkh42u4M86xlC45hABEBAAG0H1Bhd2XFgiBTcm9rYSA8
-c3Jva2FwQGdtYWlsLmNvbT6JATkEEwECACMCGy8HCwkIBwMCAQYVCAIJCgsEFgID
-AQIeAQIXgAUCU5y/OAAKCRBjoQzFaLUaYIQKB/0f82tSxMbj7YhIF6HI76rW3sTU
-7vNEIFQAEieXr/kxsjhvwoFC7Rx+tTukIHRQ89XrUzyNGE9P4jdL0q+8Ftm99kUj
-JSBKD+znM7diDlejC+8l/Vsyruo6Gjk+JSAaEN/Mio0nw0ePOK13LEiXCIw0wxAb
-hh8dDyeV+YkTWqA3HIqIrx4vtSKHFmDMan8VvG4n/RMlyE8V4eZFiSNYcEMhAaZc
-UfzZpNCJqbXqyn96mW2hyUzkt8avcsGagJXU5yxpoWCIYoHV7KkATXmHHWUz+FEk
-LW6zWc36mKnLcIy+pOG35Ba41Qfcy3Z0RdROtkQVCBy2dHAxx1qaveoGZoh6iQE/
-BBMBAgApBQJSippxAhsvBQkNKmQ/BwsJCAcDAgEGFQgCCQoLBBYCAwECHgECF4AA
-CgkQY6EMxWi1GmDR+wf/a8xyipAjRQQmB3QuLx195+q45C6UROdNPQxmimVY9h2W
-tlmEDv2yvtOlOw9pa7bqssBlb2dE/riIKJVH85C4iW4gzbQOYFeOxlgwKNK0YiJP
-Uwyv+A88eVBU4XfT11myTCRhUOJz+/MbZHRpq20N3xaQ9TJLcvWujy6VhugIxdZf
-Jj9fOKLHc5zwKwhIQVcOt/MLC36rWkuFEj+pjz0EQqbHQgQgHxnyGKjY6abLE2uE
-3JuzZUkykaD+WueW0LrHV+xj1dnNLYEy5MTLLNS27m70COfwLS/CeLuJUDSzRQXV
-vr2O/UcSCsYPSWt0qv8vRE14SOoeszZrupo3Q0uzlw==
-=X21A
+c3Jva2FwQGdtYWlsLmNvbT6JAVYEEwECAEACGy8HCwkIBwMCAQYVCAIJCgsEFgID
+AQIeAQIXgBYhBHb0XNh1ayWUNDsmD2OhDMVotRpgBQJZ7ltPBQkaMckvAAoJEGOh
+DMVotRpgYRAH/3eUSKg7LBNJaFx2GLqwmcTU8FjbtmiGAuC6H7jjWyqrvJ+nrCd4
+BNL+TWQRBGWNfeHqa5fh7IoV40t+Q1otm512TKROITG02tc7cIEjxZ974WK3/M3q
+hAN9WwEiCXFHBAKSYWuozz20dQmzmbPKLF5BTDSFSNKOMBo9iA654PK5aq+6yMTN
+hKYLf8EaE6teilJ+Kmq7IN9ZVS8XuaBus3W9XnFqhk0IhZ3e5ywqkatft+NqVFm/
+4gnMaq7LnlKiTTaDU8cVU9FH40EbeqwXBPYlc8mMF3pteyGD0L4QNdh3sS/w5bIy
+/EBr2WG3jsZqViSYCol7k5HPfOTU6YbLzAuJAT8EEwECACkFAlKKmnECGy8FCQ0q
+ZD8HCwkIBwMCAQYVCAIJCgsEFgIDAQIeAQIXgAAKCRBjoQzFaLUaYNH7B/9rzHKK
+kCNFBCYHdC4vHX3n6rjkLpRE5009DGaKZVj2HZa2WYQO/bK+06U7D2lrtuqywGVv
+Z0T+uIgolUfzkLiJbiDNtA5gV47GWDAo0rRiIk9TDK/4Dzx5UFThd9PXWbJMJGFQ
+4nP78xtkdGmrbQ3fFpD1Mkty9a6PLpWG6AjF1l8mP184osdznPArCEhBVw638wsL
+fqtaS4USP6mPPQRCpsdCBCAfGfIYqNjppssTa4Tcm7NlSTKRoP5a55bQusdX7GPV
+2c0tgTLkxMss1LbubvQI5/AtL8J4u4lQNLNFBdW+vY79RxIKxg9Ja3Sq/y9ETXhI
+6h6zNmu6mjdDS7OXiQE5BBMBAgAjAhsvBwsJCAcDAgEGFQgCCQoLBBYCAwECHgEC
+F4AFAlOcvzgACgkQY6EMxWi1GmCECgf9H/NrUsTG4+2ISBehyO+q1t7E1O7zRCBU
+ABInl6/5MbI4b8KBQu0cfrU7pCB0UPPV61M8jRhPT+I3S9KvvBbZvfZFIyUgSg/s
+5zO3Yg5XowvvJf1bMq7qOho5PiUgGhDfzIqNJ8NHjzitdyxIlwiMNMMQG4YfHQ8n
+lfmJE1qgNxyKiK8eL7UihxZgzGp/FbxuJ/0TJchPFeHmRYkjWHBDIQGmXFH82aTQ
+iam16sp/epltoclM5LfGr3LBmoCV1OcsaaFgiGKB1eypAE15hx1lM/hRJC1us1nN
++pipy3CMvqTht+QWuNUH3Mt2dEXUTrZEFQgctnRwMcdamr3qBmaIerQdUGF3ZcWC
+IFNyb2thIDxwYXdlbEBlbGdnLm9yZz6JATkEEwECACMFAlOjaNoCGy8HCwkIBwMC
+AQYVCAIJCgsEFgIDAQIeAQIXgAAKCRBjoQzFaLUaYPUXCACJbttqYm5xR3ZsC3SM
+PcWd1Bo9s7/SF6ricevvmmwSLMvDeRwWvNpO/7W+KuYp/ZcjU6ObmAw5XyEpkni+
+kzrLiWDOyNECukz0odtOCD+VpeYgYjVxIamYG8cXTgBTamh4ENWovpK59RGiC0Pk
+CrU48gvZqdEkWBEHqRLBn5+nTpg4IIRBBogr8LBq7p91dzJGTm9gLXo8jq2Lb/DX
+/Bgcdu93VI0qX+XmTwWcc1KKKDoGff4QvZ47kGjufsgmQnTKTERwRumlrNyxdZBf
+rG21YXzCa87V7Bg2a1fB9c+ezKcMIWzu4Pyk3uF0zlEMKBS48UvkG0z556nMC1Jw
+OJ6t
+=Tmda
 -----END PGP PUBLIC KEY BLOCK-----</pre>
         </div>
       </div>
