Copyright bump, removed old menus and buttons.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             </ul>
           </a>
         </li>
-        <li><a href="#riddle" data-toggle="modal">Riddle</a>
-        <li><a href="#donate" data-toggle="modal">Donate</a>
+        <!-- <li><a href="#riddle" data-toggle="modal">Riddle</a>
+        <li><a href="#donate" data-toggle="modal">Donate</a> -->
         <li><a href="https://github.com/Srokap" target="_blank"><big><span class="fa fa-github-alt"></span></big> Github</a>
       </ul>
     </div>
@@ -82,8 +82,8 @@
       and electronics geek.<br>
       You'll find here bunch of stuff related to me.
     </p>
-    <a class="btn btn-primary btn-lg btn-material-deep-purple" href="#donate" data-toggle="modal"><span
-      class="glyphicon glyphicon-thumbs-up"></span> Buy a beer</a>
+    <!-- <a class="btn btn-primary btn-lg btn-material-deep-purple" href="#donate" data-toggle="modal"><span
+      class="glyphicon glyphicon-thumbs-up"></span> Buy a beer</a> -->
   </div>
 </div>
 
@@ -297,7 +297,7 @@ OJ6t
   <div class="container">
     <!--<a href="http://nocookielaw.com/" rel="nofollow" class="btn navbar-btn btn-danger pull-right btn-raised">Regarding cookies...</a>-->
     <p class="navbar-text">
-      Copyright &copy; 2014 - 2017 Paweł Sroka
+      Copyright &copy; 2014 - 2020 Paweł Sroka
     </p>
     <p class="navbar-text" id="fps"></p>
     <p class="navbar-text" id="netStatus"></p>
